fix millennium settings gap interference

--- a/css/main/client.css
+++ b/css/main/client.css
@@ -1364,6 +1364,7 @@ input[type="radio" i]:checked::after:active {
   flex-direction: column !important;
   gap: 0px !important;
   align-items: baseline !important;
+  gap: 0px !important;
 }
 
 ._9Ql-oVe_j8E-vsDdyVdWo::after {
