--- a/css/settings/millennium.css
+++ b/css/settings/millennium.css
@@ -64,17 +64,13 @@
   gap: 8px !important;
 }
 
-._2VcTlXFC64Jtg9gvtT6cmY {
-  gap: 16px !important;
-}
-
 .update-item-type {
   font-size: var(--size-14) !important;
   font-weight: 400 !important;
   color: rgb(var(--color-primary)) !important;
   line-height: 32px !important;
-  padding: 0px 16px !important;
-  background: rgba(var(--color-accent), 0.5) !important;
+  padding: 0px !important;
+  background: transparent !important;
   border-radius: 0px !important;
 }
 
